--- a/styles.css
+++ b/styles.css
@@ -266,7 +266,19 @@ body {
     .pet-filter button {
 
         font-size: 1.375rem;
+        cursor: pointer;
 
+
+    }
+
+    .pet-filter button:hover {
+        color: #7d7d7d;
+    }
+
+    .pet-filter .active,
+    .pet-filter .active:hover {
+        color: #475AFF;
+        text-decoration: underline;
     }
 
     .list-of-pets {
